--- a/loteriaIFPR.html
+++ b/loteriaIFPR.html
@@ -20,6 +20,8 @@
   <h3><span id="outNumero4"></span></h3>
   <h3><span id="outNumero5"></span></h3>
   <h3><span id="outNumero6"></span></h3>
+  <h3><span id="outAlert" class="oculta"></span></h3>
+  <h3><span id="outSort"></span></h3>
   <script src="loteriaIFPR.js"></script>
 
 </body>
